disable temperature and fix next_nodes list

--- a/experiment/dqn/test.ipynb
+++ b/experiment/dqn/test.ipynb
@@ -2,21 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jinjun/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import quartz\n",
     "import torch\n",
+    "import math\n",
     "import dgl\n",
     "import time\n",
     "from icecream import ic"
@@ -219,11 +211,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| temp: 0.18418425871932848\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.18418425871932848"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "max([])"
+    "N = 58\n",
+    "hr = 0.8\n",
+    "temp = 1 / (math.log(hr * (N - 1) / (1 - hr)))\n",
+    "ic(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2.3678e-01, 5.5466e-01, 8.6870e-01, 3.1310e-01, 3.9806e-01, 1.6154e-01,\n",
+      "        1.1253e-01, 2.5345e-01, 8.5483e-01, 8.7368e-01, 1.0489e+00, 9.9296e-01,\n",
+      "        2.2252e-01, 9.3534e-01, 4.4354e-01, 6.7339e-01, 8.9097e-01, 8.1088e-01,\n",
+      "        6.7483e-01, 8.5591e-01, 1.2983e+00, 5.4039e-01, 1.4504e-01, 8.5817e-01,\n",
+      "        7.3451e-01, 3.4302e-02, 3.7450e-01, 2.0502e-01, 5.2891e-01, 1.4889e-01,\n",
+      "        1.3780e-03, 6.5697e-01, 2.5934e-01, 2.3895e-01, 9.2069e-01, 8.2578e-01,\n",
+      "        9.1897e-02, 2.1039e-01, 1.2449e-03, 2.5067e-02, 1.6273e-01, 6.8860e-01,\n",
+      "        1.3174e-01, 3.7473e-01, 8.4814e-01, 8.6089e-01, 7.9354e-01, 4.7550e-01,\n",
+      "        8.8124e-02, 6.0274e-02, 3.2602e-01, 1.5500e-02, 6.6569e-01, 3.1290e-01,\n",
+      "        1.3094e-02, 5.1426e-01, 2.0129e-01, 8.0870e-01])\n"
+     ]
+    }
+   ],
+   "source": [
+    "nv = torch.rand(58)\n",
+    "# ic(nv)\n",
+    "nv[10] += 0.8\n",
+    "nv[20] += 1\n",
+    "print(nv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.0128, 0.0176, 0.0241, 0.0138, 0.0150, 0.0119, 0.0113, 0.0130, 0.0238,\n",
+      "        0.0242, 0.0288, 0.0273, 0.0126, 0.0257, 0.0157, 0.0198, 0.0246, 0.0227,\n",
+      "        0.0198, 0.0238, 0.0370, 0.0173, 0.0117, 0.0238, 0.0211, 0.0105, 0.0147,\n",
+      "        0.0124, 0.0171, 0.0117, 0.0101, 0.0195, 0.0131, 0.0128, 0.0254, 0.0231,\n",
+      "        0.0111, 0.0125, 0.0101, 0.0104, 0.0119, 0.0201, 0.0115, 0.0147, 0.0236,\n",
+      "        0.0239, 0.0223, 0.0163, 0.0110, 0.0107, 0.0140, 0.0103, 0.0197, 0.0138,\n",
+      "        0.0102, 0.0169, 0.0124, 0.0227]) tensor(0.0288) tensor(0.0370)\n"
+     ]
+    }
+   ],
+   "source": [
+    "smnv = torch.softmax(nv, dim=0)\n",
+    "print(smnv, smnv[10], smnv[20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([52]),\n",
+       " tensor([53]),\n",
+       " tensor([42]),\n",
+       " tensor([5]),\n",
+       " tensor([46]),\n",
+       " tensor([54]),\n",
+       " tensor([20]),\n",
+       " tensor([11]),\n",
+       " tensor([46]),\n",
+       " tensor([7])]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[torch.multinomial(smnv, 1) for _ in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.0013e-03, 5.6245e-03, 3.0944e-02, 1.5153e-03, 2.4035e-03, 6.6546e-04,\n",
+      "        5.1000e-04, 1.0961e-03, 2.8699e-02, 3.1791e-02, 8.2317e-02, 6.0752e-02,\n",
+      "        9.2664e-04, 4.4433e-02, 3.0766e-03, 1.0716e-02, 3.4920e-02, 2.2607e-02,\n",
+      "        1.0800e-02, 2.8867e-02, 3.1878e-01, 5.2052e-03, 6.0845e-04, 2.9224e-02,\n",
+      "        1.4933e-02, 3.3351e-04, 2.1149e-03, 8.4267e-04, 4.8908e-03, 6.2132e-04,\n",
+      "        2.7892e-04, 9.8023e-03, 1.1317e-03, 1.0131e-03, 4.1035e-02, 2.4511e-02,\n",
+      "        4.5595e-04, 8.6760e-04, 2.7872e-04, 3.1720e-04, 6.6978e-04, 1.1639e-02,\n",
+      "        5.6606e-04, 2.1174e-03, 2.7675e-02, 2.9660e-02, 2.0576e-02, 3.6596e-03,\n",
+      "        4.4671e-04, 3.8402e-04, 1.6254e-03, 3.0115e-04, 1.0277e-02, 1.5137e-03,\n",
+      "        2.9724e-04, 4.5166e-03, 8.2578e-04, 2.2340e-02]) tensor(0.0823) tensor(0.3188)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmpsmnv = torch.softmax(nv / temp, dim=0)\n",
+    "print(tmpsmnv, tmpsmnv[10], tmpsmnv[20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([20]),\n",
+       " tensor([20]),\n",
+       " tensor([35]),\n",
+       " tensor([20]),\n",
+       " tensor([10]),\n",
+       " tensor([20]),\n",
+       " tensor([34]),\n",
+       " tensor([20]),\n",
+       " tensor([29]),\n",
+       " tensor([10])]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[torch.multinomial(tmpsmnv, 1) for _ in range(10)]"
    ]
   }
  ],
