fix node_list for observer and change some default config values

--- a/experiment/dqn/test.ipynb
+++ b/experiment/dqn/test.ipynb
@@ -377,6 +377,26 @@
    "source": [
     "[torch.multinomial(tmpsmnv, 1) for _ in range(10)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0056])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmpsmnv[torch.BoolTensor([False, True] + [False for _ in range(56)])]"
+   ]
   }
  ],
  "metadata": {
