--- a/experiment/dqn/test.ipynb
+++ b/experiment/dqn/test.ipynb
@@ -397,6 +397,36 @@
    "source": [
     "tmpsmnv[torch.BoolTensor([False, True] + [False for _ in range(56)])]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([False,  True, False])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jinjun/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "x = torch.BoolTensor([False, True, False])\n",
+    "if x[1]:\n",
+    "    print(x)\n",
+    "else:\n",
+    "    print(1)"
+   ]
   }
  ],
  "metadata": {
