--- a/experiment/dqn/test.ipynb
+++ b/experiment/dqn/test.ipynb
@@ -400,32 +400,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([False,  True, False])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jinjun/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "tensor([[1.]]) torch.Size([1, 1])\n",
+      "tensor([[0.1768, 0.2786, 0.2713, 0.6060, 0.6584],\n",
+      "        [0.6335, 0.2532, 0.1173, 0.9449, 0.6471],\n",
+      "        [0.5164, 0.2086, 0.8328, 0.6933, 0.7358]])\n",
+      "tensor([[0.1768, 0.2786, 0.2713, 0.6060, 0.6584],\n",
+      "        [0.6335, 0.2532, 0.1173, 0.9449, 0.6471],\n",
+      "        [0.5164, 0.2086, 0.8328, 0.6933, 0.7358]])\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
-    "x = torch.BoolTensor([False, True, False])\n",
-    "if x[1]:\n",
-    "    print(x)\n",
-    "else:\n",
-    "    print(1)"
+    "x = torch.rand(3, 5)\n",
+    "print(torch.Tensor([1]).unsqueeze(1), torch.Tensor([1]).unsqueeze(1).shape)\n",
+    "print(x)\n",
+    "print(x / torch.Tensor([1]).unsqueeze(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Test(a=0, b=0.0), Test(a=1, b=0.5), Test(a=2, b=1.0), Test(a=3, b=1.5), Test(a=4, b=2.0)]\n",
+      "Test(a=[0, 1, 2, 3, 4], b=[0.0, 0.5, 1.0, 1.5, 2.0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass, fields\n",
+    "from typing import Callable, Iterable, Iterator, Optional, Tuple, List, Any, Sequence\n",
+    "\n",
+    "@dataclass\n",
+    "class Test:\n",
+    "    a: int\n",
+    "    b: float\n",
+    "    \n",
+    "    def __iter__(self) -> Iterator:\n",
+    "        return iter([\n",
+    "            getattr(self, field.name)\n",
+    "            for field in fields(self)\n",
+    "        ])\n",
+    "    \n",
+    "\n",
+    "ts = [Test(i, i/2) for i in range(5)]\n",
+    "print(ts)\n",
+    "\n",
+    "tl = Test(*map(list, zip(*ts)))\n",
+    "print(tl)"
    ]
   }
  ],
