add best graph sync between agents by file system

--- a/experiment/dqn/test.ipynb
+++ b/experiment/dqn/test.ipynb
@@ -461,6 +461,22 @@
     "tl = Test(*map(list, zip(*ts)))\n",
     "print(tl)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import torch\n",
+    "\n",
+    "d = (58, {'key': 'value'})\n",
+    "s = pickle.dumps(d)\n",
+    "x = torch.frombuffer(s, dtype=torch.int8)\n",
+    "with open('tmp.tmp', 'wb') as f:\n",
+    "    pickle.dump(d, f)"
+   ]
   }
  ],
  "metadata": {
