fix non-syncronized/fake ddp

--- a/experiment/ppo-new/test/test.ipynb
+++ b/experiment/ppo-new/test/test.ipynb
@@ -345,10 +345,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def name() -> str:\n",
+    "        return 'A'\n",
+    "\n",
+    "a = A()\n",
+    "A.name()"
+   ]
   }
  ],
  "metadata": {
