refactor gate_count to cost

--- a/experiment/dqn/test.ipynb
+++ b/experiment/dqn/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jinjun/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import quartz\n",
     "import torch\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +41,7 @@
        "3904"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,15 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.902898 ms\n",
-      "-3680862461118220112\n"
+      "3.485784 ms\n",
+      "-5844600205374883824\n"
      ]
     }
    ],
@@ -82,15 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.175393 ms\n",
-      "-3680862461118220112\n"
+      "1.172195 ms\n",
+      "-5844600205374883824\n",
+      "24\n"
      ]
     }
    ],
@@ -99,7 +109,8 @@
     "graph2 = quartz.PyGraph.from_qasm_str(context=quartz_context, qasm_str=qasm_str)\n",
     "e_time = time.time_ns()\n",
     "print(f'{(e_time - s_time) / 1e6} ms')\n",
-    "print(hash(graph2))"
+    "print(hash(graph2))\n",
+    "print(graph2.cx_count)"
    ]
   },
   {
