--- a/experiment/ppo-new/try/testq.ipynb
+++ b/experiment/ppo-new/try/testq.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jinjun/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8669\n"
+     ]
+    }
+   ],
    "source": [
     "import quartz # type: ignore\n",
     "\n",
@@ -19,6 +35,7 @@
     "    no_increase=no_increase,\n",
     "    include_nop=include_nop,\n",
     ")\n",
+    "print(f'{quartz_context.num_xfers}')\n",
     "\n",
     "def qasm_to_graph(qasm_str: str) -> quartz.PyGraph:\n",
     "    graph = quartz.PyGraph.from_qasm_str(context=quartz_context, qasm_str=qasm_str)\n",
@@ -30,11 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "qasm_file = '../outputs/2022-06-26/08-45-11/barenco_tof_3/38_3/24_38_2_26_8622.qasm'\n",
+    "# qasm_file = '../outputs/2022-06-26/08-45-11/barenco_tof_3/38_3/24_38_2_26_8622.qasm'\n",
+    "qasm_file = '../../nam_circs/barenco_tof_3.qasm'\n",
     "with open(qasm_file) as f:\n",
     "    qasm = f.read()\n",
     "graph = qasm_to_graph(qasm)"
@@ -42,21 +60,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38\n",
-      "16\n"
+      "58\n",
+      "24\n"
      ]
     }
    ],
    "source": [
     "print(graph.gate_count)\n",
-    "print(graph.cx_count)\n"
+    "print(graph.cx_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[98, 100, 188, 189, 499, 501, 507, 511, 8668]\n"
+     ]
+    }
+   ],
+   "source": [
+    "av_xfers = graph.available_xfers_parallel(\n",
+    "    context=quartz_context, node=graph.get_node_from_id(id=22))\n",
+    "print(av_xfers)"
    ]
   },
   {
