use fixed advantage

--- a/experiment/ppo-new/try/test.ipynb
+++ b/experiment/ppo-new/try/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,10 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| fields(Test): (Field(name='a',type='Sequence[int]',default=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,default_factory=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,init=True,repr=True,hash=None,compare=True,metadata=mappingproxy({}),kw_only=False,_field_type=_FIELD),\n",
+      "                   Field(name='b',type='Sequence[float]',default=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,default_factory=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,init=True,repr=True,hash=None,compare=True,metadata=mappingproxy({}),kw_only=False,_field_type=_FIELD))\n",
+      "ic| fields(ChildTest): (Field(name='a',type='Sequence[int]',default=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,default_factory=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,init=True,repr=True,hash=None,compare=True,metadata=mappingproxy({}),kw_only=False,_field_type=_FIELD),\n",
+      "                        Field(name='b',type='Sequence[float]',default=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,default_factory=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,init=True,repr=True,hash=None,compare=True,metadata=mappingproxy({}),kw_only=False,_field_type=_FIELD),\n",
+      "                        Field(name='child',type='str',default=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,default_factory=<dataclasses._MISSING_TYPE object at 0x7f5510ed27d0>,init=True,repr=True,hash=None,compare=True,metadata=mappingproxy({}),kw_only=False,_field_type=_FIELD))\n"
+     ]
+    }
+   ],
    "source": [
+    "from __future__ import annotations\n",
     "from dataclasses import dataclass, fields\n",
     "from typing import Callable, Iterable, Iterator, Optional, Tuple, List, Any, Sequence\n",
     "\n",
@@ -63,7 +76,13 @@
     "            getattr(self, field.name)\n",
     "            for field in fields(self)\n",
     "        ])\n",
-    "        \n",
+    "\n",
+    "@dataclass\n",
+    "class ChildTest(Test):\n",
+    "    child: str\n",
+    "    \n",
+    "ic(fields(Test))\n",
+    "ic(fields(ChildTest))\n",
     "\n",
     "class TestIterator:\n",
     "\n",
