use release and O3, add greedy sample for fine-tune

--- a/experiment/ppo-new/try/testq.ipynb
+++ b/experiment/ppo-new/try/testq.ipynb
@@ -23,6 +23,7 @@
    ],
    "source": [
     "import quartz # type: ignore\n",
+    "import time\n",
     "\n",
     "gate_set = ['h', 'cx', 'x', 'rz', 'add']\n",
     "ecc_file_path: str = '../../ecc_set/nam.json.ecc'\n",
@@ -47,15 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dur: 10.050535 ms\n"
+     ]
+    }
+   ],
    "source": [
     "# qasm_file = '../outputs/2022-06-26/08-45-11/barenco_tof_3/38_3/24_38_2_26_8622.qasm'\n",
-    "qasm_file = '../../nam_circs/barenco_tof_3.qasm'\n",
+    "qasm_file = '../../nam_circs/adder_8.qasm'\n",
     "with open(qasm_file) as f:\n",
     "    qasm = f.read()\n",
-    "graph = qasm_to_graph(qasm)"
+    "s_time = time.time_ns()\n",
+    "graph = qasm_to_graph(qasm)\n",
+    "e_time = time.time_ns()\n",
+    "print(f'dur: {(e_time - s_time) / 1e6} ms')"
    ]
   },
   {
