Added some scripts to convert between t_tdg gate set and nam's gate set

--- a/experiment/toffoli_flip.ipynb
+++ b/experiment/toffoli_flip.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "from os.path import join, isfile\n",
     "\n",
-    "qasm_path = os.getcwd() + '/t_tdg_h_cx_toffoli_flip_dataset/'\n",
+    "qasm_path = os.getcwd() + '/nam_circs/'\n",
     "qasm_fns = [\n",
     "    fn for fn in os.listdir(qasm_path)\n",
     "    if isfile(join(qasm_path, fn)) and fn[-12:] == 'toffoli_flip'\n",
@@ -28,6 +28,187 @@
     "                s = s.replace('rz(pi*0.250000)', 't')\n",
     "                s += '\\n'\n",
     "                fout.write(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from os.path import join, isfile\n",
+    "\n",
+    "qasm_path = os.getcwd() + '/barenco_tof_3_toffoli_flip_dataset/'\n",
+    "qasm_fns = [\n",
+    "    fn for fn in os.listdir(qasm_path)\n",
+    "    if isfile(join(qasm_path, fn)) and fn[-12:] == 'toffoli_flip'\n",
+    "]\n",
+    "\n",
+    "for fn in qasm_fns:\n",
+    "    full_fn = qasm_path + fn\n",
+    "    with open(full_fn, 'r') as fin:\n",
+    "        qasm_str = fin.read()\n",
+    "        qasm_strs = qasm_str.split('\\n')\n",
+    "        with open(f'{full_fn[:-19]}_{full_fn[-14:-13]}_after_toffoli_flip.qasm', 'w') as fout:\n",
+    "            for s in qasm_strs:\n",
+    "                if s == '\\n' or s == '':\n",
+    "                    continue\n",
+    "                s = s.replace('rz(pi*-0.250000)', 'tdg')\n",
+    "                s = s.replace('rz(pi*0.250000)', 't')\n",
+    "                s += '\\n'\n",
+    "                fout.write(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from os.path import join, isfile\n",
+    "\n",
+    "qasm_path = os.getcwd() + '/nam_rm_circs/'\n",
+    "qasm_fns = [\n",
+    "    fn for fn in os.listdir(qasm_path)\n",
+    "    if isfile(join(qasm_path, fn)) and fn[-5:] == '.qasm'\n",
+    "]\n",
+    "\n",
+    "for fn in qasm_fns:\n",
+    "    full_fn = qasm_path + fn\n",
+    "    with open(full_fn, 'r') as fin:\n",
+    "        qasm_str = fin.read()\n",
+    "        qasm_strs = qasm_str.split('\\n')\n",
+    "        with open(os.getcwd() + '/t_tdg_rm_circs/' + fn, 'w') as fout:\n",
+    "            for s in qasm_strs:\n",
+    "                if s == '\\n' or s == '':\n",
+    "                    continue\n",
+    "                if s.find('rz(pi*0.500000)') != -1:\n",
+    "                    s = s.replace('rz(pi*0.500000)', 't')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*-0.500000)') != -1:\n",
+    "                    s = s.replace('rz(pi*-0.500000)', 'tdg')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*0.750000)') != -1:\n",
+    "                    s = s.replace('rz(pi*0.750000)', 't')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*-0.500000)') != -1:\n",
+    "                    s = s.replace('rz(pi*-0.500000)', 'tdg')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*1.000000)') != -1:\n",
+    "                    s = s.replace('rz(pi*1.000000)', 't')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*-1.000000)') != -1:\n",
+    "                    s = s.replace('rz(pi*-1.000000)', 'tdg')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*1.250000)') != -1:\n",
+    "                    s = s.replace('rz(pi*1.250000)', 'tdg')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*-1.250000)') != -1:\n",
+    "                    s = s.replace('rz(pi*-1.250000)', 't')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*-1.500000)') != -1:\n",
+    "                    s = s.replace('rz(pi*-1.500000)', 't')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                elif s.find('rz(pi*1.500000)') != -1:\n",
+    "                    s = s.replace('rz(pi*1.500000)', 'tdg')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)\n",
+    "                    fout.write(s)\n",
+    "                else:\n",
+    "                    s = s.replace('rz(pi*-0.250000)', 'tdg')\n",
+    "                    s = s.replace('rz(pi*0.250000)', 't')\n",
+    "                    s = s.replace('rz(pi*1.750000)', 'tdg')\n",
+    "                    s = s.replace('rz(pi*-1.750000)', 't')\n",
+    "                    s += '\\n'\n",
+    "                    fout.write(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/zikun/quartz/experimentnam_circs/gf2^16_mult.qasm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/zikun/quartz/experiment/toffoli_flip.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225365727665722d4750552d31227d/home/zikun/quartz/experiment/toffoli_flip.ipynb#ch0000001vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mos\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpath\u001b[39;00m \u001b[39mimport\u001b[39;00m join, isfile\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225365727665722d4750552d31227d/home/zikun/quartz/experiment/toffoli_flip.ipynb#ch0000001vscode-remote?line=3'>4</a>\u001b[0m qasm_fn \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetcwd() \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnam_circs/gf2^16_mult.qasm\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225365727665722d4750552d31227d/home/zikun/quartz/experiment/toffoli_flip.ipynb#ch0000001vscode-remote?line=5'>6</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(qasm_fn, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m fin:\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225365727665722d4750552d31227d/home/zikun/quartz/experiment/toffoli_flip.ipynb#ch0000001vscode-remote?line=6'>7</a>\u001b[0m     qasm_str \u001b[39m=\u001b[39m fin\u001b[39m.\u001b[39mread()\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a225365727665722d4750552d31227d/home/zikun/quartz/experiment/toffoli_flip.ipynb#ch0000001vscode-remote?line=7'>8</a>\u001b[0m     qasm_strs \u001b[39m=\u001b[39m qasm_str\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/zikun/quartz/experimentnam_circs/gf2^16_mult.qasm'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from os.path import join, isfile\n",
+    "\n",
+    "qasm_fn = os.getcwd() + 'nam_circs/gf2^16_mult.qasm'\n",
+    "\n",
+    "with open(qasm_fn, 'r') as fin:\n",
+    "    qasm_str = fin.read()\n",
+    "    qasm_strs = qasm_str.split('\\n')\n",
+    "    with open('t_tdg_circs/gf2^16_mult.qasm', 'w') as fout:\n",
+    "        for s in qasm_strs:\n",
+    "            if s == '\\n' or s == '':\n",
+    "                continue\n",
+    "            s = s.replace('tdg', 'rz(pi*-0.250000)')\n",
+    "            s = s.replace('t', 'rz(pi*0.250000)')\n",
+    "            s += '\\n'\n",
+    "            fout.write(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from os.path import join, isfile\n",
+    "\n",
+    "src_path = os.getcwd() + '/nam_circs/gf2^16_mult.qasm'\n",
+    "dst_path = os.getcwd() + '/t_tdg_circs/gf2^16_mult.qasm'\n",
+    "\n",
+    "with open(qasm_fn, 'r') as fin:\n",
+    "    qasm_str = fin.read()\n",
+    "    qasm_strs = qasm_str.split('\\n')\n",
+    "    with open(dst_path, 'w') as fout:\n",
+    "        for s in qasm_strs:\n",
+    "            if s == '\\n' or s == '':\n",
+    "                continue\n",
+    "            s = s.replace('tdg', 'rz(pi*-0.250000)')\n",
+    "            s = s.replace('t', 'rz(pi*0.250000)')\n",
+    "            s += '\\n'\n",
+    "            fout.write(s)"
    ]
   }
  ],
