Added changes to test files

--- a/experiment/ppo/log_analysis.ipynb
+++ b/experiment/ppo/log_analysis.ipynb
@@ -2,27 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "[3, 6, 12, 13, 382, 398, 400, 404, 438, 444, 456, 472, 478, 483, 484, 486, 487, 494, 499, 510, 521, 523, 556, 602, 606, 626, 640, 650, 686, 687, 689, 694, 728, 732, 740, 788, 789, 791, 797, 830, 844, 856, 884, 917, 924, 927, 929, 936, 940, 944, 950, 956, 962, 966, 996, 1004, 1006, 1012, 1014, 1016, 1018, 1024, 1038, 1040, 1042, 1045, 1046, 1048, 1050, 1052, 1054, 1066, 1070, 1151, 1159, 1162, 1164, 1169, 1176, 1178, 1183, 1187, 1189, 1193, 1195, 1209, 1213, 1217, 1219, 1225, 1227, 1229, 1231, 1245, 1248, 1262, 1265, 1267, 1275, 1281, 1283, 1287, 1289, 1295, 1300, 1302, 1311, 1315, 1318, 1321, 1325, 1330, 1333, 1336, 1346, 1348, 1351, 1359, 1363, 1367, 1368, 1370, 1373, 1375, 1391, 1393, 1399, 1401, 1404, 1405, 1407, 1408, 1421, 1427, 1429, 1433, 1439, 1441, 1443, 1446, 1455, 1461, 1463, 1467, 1469, 1471, 1472, 1477, 1481, 1483, 1503, 1504, 1511, 1513, 1515, 1517, 1519, 1521, 1525, 1537, 1539, 1545, 1547, 1549, 1551, 1559, 1566, 1573, 1579, 1581, 1585, 1587, 1594, 1595, 1597, 1598, 1619, 1627, 1631, 1633, 1635, 1641, 1649, 1651, 1658, 1659, 1666, 1667, 1669, 1670, 1677, 1681, 1695, 1699, 1701, 1704, 1706, 1713, 1718, 1719, 1721, 1722, 1731, 1739, 1741, 1743, 1751, 1754, 1756, 1760, 1762, 1765, 1769, 1771, 1772, 1777, 1783, 1791, 1793, 1799, 1803, 1807, 1818, 1827, 1829, 1831, 1833, 1835, 1837, 1839, 1843, 1853, 1855, 1857, 1871, 1875, 1877, 1879, 1884, 1893, 1895, 1896, 1919, 1929, 1933, 1935, 1943, 1947, 1949, 1951, 1957, 1959, 1961, 1963, 1965, 1973, 1976, 1981, 1987, 1989, 1991, 1995, 1998, 2017, 2019, 2021, 2038, 2039, 2041, 2042, 2049, 2051, 2054, 2057, 2059, 2067, 2069, 2079, 2081, 2083, 2091, 2095, 2100, 2101, 2115, 2116, 2121, 2123, 2131, 2133, 2135, 2137, 2141, 2144, 2147, 2151, 2153, 2157, 2158, 2163, 2169, 2174, 2177, 2185, 2188, 2193, 2199, 2201, 2217, 2218, 2222, 2225, 2233, 2234, 2235, 2245, 2247, 2249, 2257, 2259, 2267, 2275, 2277, 2278, 2283, 2285, 2288, 2290, 2294, 2299, 2305, 2307, 2335, 2336, 2344, 2347, 2349, 2350, 2356, 2363, 2365, 2369, 2370, 2376, 2379, 2381, 2387, 2391, 2397, 2437, 2457, 2459, 2473, 2474, 2476, 2485, 2503, 2527, 2549, 2550, 2552, 2573, 2585, 2588, 2590, 2605, 2631, 2635, 2655, 2676, 2700, 2707, 2714, 2721, 2737, 2815, 2830, 2832, 2839, 2847, 2849, 2861, 2863, 2871, 2873, 2875, 2877, 2893, 2911, 2912, 2914, 2999, 3002, 3009, 3043, 3045, 3065, 3093, 3097, 3131, 3133, 3149, 3153, 3191, 3197, 3198, 3207, 3217, 3227, 3231, 3331, 3351, 3419, 3439, 3443, 3453, 3459, 3467, 3468, 3517, 3531, 3551, 3561, 3569, 3579, 3593, 3595, 3603, 3605, 3619, 3623, 3629, 3633, 3649, 3651, 3655, 3657, 3667, 3675, 3677, 3679, 3681, 3683, 3685, 3687, 3695, 3697, 3705, 3713, 3719, 3761, 3767, 3775, 3795, 3827, 3849, 3891, 3899, 3901]\n"
+      "7121\n",
+      "1041\n",
+      "999\n"
      ]
     }
    ],
    "source": [
     "import quartz\n",
     "\n",
-    "context = quartz.QuartzContext(gate_set=['h', 'cx', 't', 'tdg'],\n",
-    "                               filename='../../bfs_verified_simplified.json',\n",
+    "# context = quartz.QuartzContext(gate_set=['h', 'cx', 't', 'tdg'],\n",
+    "#                                filename='../../bfs_verified_simplified.json',\n",
+    "#                                no_increase=False, include_nop=True)\n",
+    "context = quartz.QuartzContext(gate_set=['h', 'cx', 'x', 't', 'tdg'],\n",
+    "                               filename='../ecc_set/t_tdg.json.ecc',\n",
     "                               no_increase=False, include_nop=True)\n",
     "\n",
+    "print(context.num_xfers)\n",
     "xfers = context.get_xfers()\n",
-    "print(xfers[3903].is_nop)\n",
+    "# print(xfers[3903].is_nop)\n",
     "\n",
     "reduce_xfer_set = set([])\n",
     "increase_xfer_set = set([])\n",
@@ -33,14 +38,25 @@
     "            reduce_xfer_set.add(i)\n",
     "        elif xfers[i].src_gate_count < xfers[i].dst_gate_count:\n",
     "            increase_xfer_set.add(i)\n",
-    "print(sorted(list(increase_xfer_set)))"
+    "\n",
+    "print(len(reduce_xfer_set))\n",
+    "print(len(increase_xfer_set))\n",
+    "# print(sorted(list(increase_xfer_set)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no change\n"
+     ]
+    }
+   ],
    "source": [
     "xfer = 2863\n",
     "if xfer in reduce_xfer_set:\n",
@@ -60,13 +76,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "459\n",
-      "50\n"
+      "1041\n",
+      "298\n"
      ]
     }
    ],
    "source": [
-    "log_fn = 'PPO_logs/rl_ppo_local_multi_init_states/PPO_rl_ppo_local_multi_init_states_log_5.csv'\n",
+    "# log_fn = 'fine-tune/PPO_logs/rl_ppo_fine_tune/PPO_rl_ppo_fine_tune_log_107.csv'\n",
+    "log_fn = 'ppo-new-pretrain/PPO_logs/rl_ppo_fine_tune/PPO_rl_ppo_fine_tune_log_6.csv'\n",
     "\n",
     "used_reduce_xfer_set = set([])\n",
     "\n",
@@ -77,11 +94,45 @@
     "            pos = l.find('xfer')\n",
     "            if pos != -1:\n",
     "                l = l[pos + 6:]\n",
-    "                xfer_id = int(l[:l.find(',')])\n",
+    "                xfer_id = int(l[:l.find('\\t')])\n",
     "                used_reduce_xfer_set.add(xfer_id)\n",
     "\n",
     "print(len(reduce_xfer_set))\n",
     "print(len(used_reduce_xfer_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import quartz\n",
+    "\n",
+    "# context = quartz.QuartzContext(gate_set=['h', 'cx', 't', 'tdg'],\n",
+    "#                                filename='../../bfs_verified_simplified.json',\n",
+    "#                                no_increase=False, include_nop=True)\n",
+    "context = quartz.QuartzContext(gate_set=['h', 'cx', 'rz', 'x', 'add'],\n",
+    "                               filename='../ecc_set/nam.json.ecc',\n",
+    "                               no_increase=False, include_nop=True)\n",
+    "\n",
+    "print(context.num_xfers)\n",
+    "xfers = context.get_xfers()\n",
+    "# print(xfers[3903].is_nop)\n",
+    "\n",
+    "reduce_xfer_set = set([])\n",
+    "increase_xfer_set = set([])\n",
+    "\n",
+    "for i in range(len(xfers)):\n",
+    "    if not xfers[i].is_nop:\n",
+    "        if xfers[i].src_gate_count > xfers[i].dst_gate_count:\n",
+    "            reduce_xfer_set.add(i)\n",
+    "        elif xfers[i].src_gate_count < xfers[i].dst_gate_count:\n",
+    "            increase_xfer_set.add(i)\n",
+    "\n",
+    "print(len(reduce_xfer_set))\n",
+    "print(len(increase_xfer_set))\n",
+    "# print(sorted(list(increase_xfer_set)))"
    ]
   }
  ],
@@ -104,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
