suppport global feature in GIN

--- a/experiment/ppo-new/try/testq.ipynb
+++ b/experiment/ppo-new/try/testq.ipynb
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dur: 10.050535 ms\n"
+      "dur: 5.831058 ms\n"
      ]
     }
    ],
@@ -68,6 +68,45 @@
     "graph = qasm_to_graph(qasm)\n",
     "e_time = time.time_ns()\n",
     "print(f'dur: {(e_time - s_time) / 1e6} ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([958])\n",
+      "torch.Size([2, 32])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import dgl\n",
+    "from dgl.nn.pytorch.glob import SumPooling, AvgPooling, MaxPooling\n",
+    "\n",
+    "with open('../../nam_circs/adder_8.qasm') as f:\n",
+    "    qasm = f.read()\n",
+    "pg1 = qasm_to_graph(qasm)\n",
+    "with open('../../nam_circs/barenco_tof_3.qasm') as f:\n",
+    "    qasm = f.read()\n",
+    "pg2 = qasm_to_graph(qasm)\n",
+    "\n",
+    "g1 = pg1.to_dgl_graph()\n",
+    "g2 = pg2.to_dgl_graph()\n",
+    "\n",
+    "bg = dgl.batch([g1, g2])\n",
+    "print(bg.ndata['gate_type'].shape)\n",
+    "\n",
+    "pool = SumPooling()\n",
+    "\n",
+    "h = torch.rand(958, 32)\n",
+    "pooled_h = pool(bg, h)\n",
+    "print(pooled_h.shape)"
    ]
   },
   {
@@ -87,6 +126,28 @@
    "source": [
     "print(graph.gate_count)\n",
     "print(graph.cx_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([900,  58])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bg.batch_num_nodes()\n",
+    "# x0 = torch.zeros(0)\n",
+    "# x0 += torch.rand(3, 16)"
    ]
   },
   {
