add depth_2_gc as cost type

--- a/experiment/ppo-new/try/testq.ipynb
+++ b/experiment/ppo-new/try/testq.ipynb
@@ -67,7 +67,8 @@
     "s_time = time.time_ns()\n",
     "graph = qasm_to_graph(qasm)\n",
     "e_time = time.time_ns()\n",
-    "print(f'dur: {(e_time - s_time) / 1e6} ms')"
+    "print(f'dur: {(e_time - s_time) / 1e6} ms')\n",
+    "print(graph.gate_count)"
    ]
   },
   {
